Fix path-layer surface exporting when no clone is visible.

https://bugzilla.gnome.org/show_bug.cgi?id=771698