champlain/champlain-path-layer.c
@@ -842,6 +842,9 @@ update_surface (ChamplainPathLayer *layer,
       cairo_surface_destroy (new_surface);
       cairo_destroy (cr);
     }
+  /* When only the right actor is visible, no merging is required */
+  else if (!CLUTTER_ACTOR_IS_VISIBLE (priv->left_actor))
+    set_surface (CHAMPLAIN_EXPORTABLE (layer), priv->right_surface);
 }
 
 static gboolean
